
Storage
- The Async Storage API has been tested as far as possible but we cannot guarantee that there aren't bugs in this new API
 
Change History
--------------

Please see ChangeLog.txt included in this release

Release History
---------------

31/07/2009 - First public Alpha release (Version 0.1.0 Alpha)

03/08/2009 - Rerelease to fix a bug with SQL based storage which occurs when multi-threaded writing is performed

25/09/2009 - Release of Version 0.1.1 Alpha (Build 0.1.1.18640)

5/10/2009 - Re-release of Version 0.1.1 Alpha (Build 0.1.1.20361) which fixes issues with Blank Node IDs and Fast writers when Compression Level is None

27/11/2009 - Release of Version 0.1.2 Alpha (Build 0.1.2.16009)

18/11/2009 - Release of Version 0.1.3 Alpha (Build 0.1.3.20723)

3/2/2010 - Release of Version 0.2.0 Alpha (Build 0.2.0.27063)

11/3/2010 - Release of Version 0.2.1 Alpha (Build 0.2.1.24471)

16/4/2010 - Release of Version 0.2.2 Alpha (Build 0.2.2.24625)

10/8/2010 - Release of Version 0.3.0 Alpha (Build 0.3.0.23092)

8/10/2010 - Release of Version 0.3.1 Alpha (Build 0.3.1.20277)

1/3/2011 - Release of Version 0.4.0 Beta (Build 0.4.0.23346)

20/5/2011 - Release of Version 0.4.1 Beta (Build 0.4.1.15669)

9/9/2011 - Release of Version 0.5.0 Beta (Build 0.5.0.20572)

23/9/2011 - Rerelease of Version 0.5.0 Beta (Build 0.5.0.20572) to include the Query.FullText library

30/11/2011 - Release of Version 0.5.1 Beta (Build 0.5.1.17871)

19/2/2012 - Release of Version 0.6.0 Beta (Build 0.6.0.2145)

3/3/2012 - Maintenance Release of Version 0.6.1 Beta (Build 0.6.1.2156)

1/4/2012 - Release of Version 0.6.2 Beta (Build 0.6.2.2180)

4/7/2012 - Release of Version 0.7.0 Beta (Build 0.7.0.2246)

27/7/2012 - Release of Version 0.7.1 Beta (Build 0.7.1.2329)

26/9/2012 - Release of Version 0.7.2 Beta (Build 0.7.2.1527)

26/11/2012 - Release of Version 0.8.0 RC 1 (Build 0.8.0.1930)

Acknowledgements
----------------

Acknowledgements can be found in the Acknowledgments.txt file