@@ -57,8 +57,9 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("0.8.1.0")]
-[assembly: AssemblyFileVersion("0.8.1.0")]
+[assembly: AssemblyVersion("0.8.1.1939")]
+[assembly: AssemblyFileVersion("0.8.1.1939")]
 #if !NANT
 [assembly: InternalsVisibleTo("dotNetRDF.Test")]
 #endif
+
